tests-integration/tests/roundtrip/invalid/semantic/typecheck/bool_constant_in_set_expr/input.essence
letting s be {true, false}
such that true subsetEq s 